docs/0.17/_sources/api/gammapy.estimators.FluxPoints.rst.txt
FluxPoints
==========

.. currentmodule:: gammapy.estimators

.. autoclass:: FluxPoints
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~FluxPoints.e_edges
      ~FluxPoints.e_max
      ~FluxPoints.e_min
      ~FluxPoints.e_ref
      ~FluxPoints.is_ul
      ~FluxPoints.sed_type
      ~FluxPoints.table_formatted

   .. rubric:: Methods Summary

   .. autosummary::

      ~FluxPoints.drop_ul
      ~FluxPoints.plot
      ~FluxPoints.plot_ts_profiles
      ~FluxPoints.read
      ~FluxPoints.stack
      ~FluxPoints.to_sed_type
      ~FluxPoints.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: e_edges
   .. autoattribute:: e_max
   .. autoattribute:: e_min
   .. autoattribute:: e_ref
   .. autoattribute:: is_ul
   .. autoattribute:: sed_type
   .. autoattribute:: table_formatted

   .. rubric:: Methods Documentation

   .. automethod:: drop_ul
   .. automethod:: plot
   .. automethod:: plot_ts_profiles
   .. automethod:: read
   .. automethod:: stack
   .. automethod:: to_sed_type
   .. automethod:: write
