docs/0.18.1/_sources/api/gammapy.estimators.FluxPoints.rst.txt
FluxPoints
==========

.. currentmodule:: gammapy.estimators

.. autoclass:: FluxPoints
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~FluxPoints.energy_edges
      ~FluxPoints.energy_max
      ~FluxPoints.energy_min
      ~FluxPoints.energy_ref
      ~FluxPoints.is_ul
      ~FluxPoints.sed_type
      ~FluxPoints.table_formatted

   .. rubric:: Methods Summary

   .. autosummary::

      ~FluxPoints.drop_ul
      ~FluxPoints.plot
      ~FluxPoints.plot_ts_profiles
      ~FluxPoints.read
      ~FluxPoints.stack
      ~FluxPoints.to_sed_type
      ~FluxPoints.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: energy_edges
   .. autoattribute:: energy_max
   .. autoattribute:: energy_min
   .. autoattribute:: energy_ref
   .. autoattribute:: is_ul
   .. autoattribute:: sed_type
   .. autoattribute:: table_formatted

   .. rubric:: Methods Documentation

   .. automethod:: drop_ul
   .. automethod:: plot
   .. automethod:: plot_ts_profiles
   .. automethod:: read
   .. automethod:: stack
   .. automethod:: to_sed_type
   .. automethod:: write
